wip: page html recipe

--- a/pages/recipe.html
+++ b/pages/recipe.html
@@ -12,9 +12,19 @@
       <div id="logoWrapper">OuiCheffe!</div>
       <a href="#">Ma liste</a>
       <a href="/pages/plats.html">Mes plats</a>
-      <div class="grid">
-        
+    </nav>
+    <a href="#">Retour</a>
+    <div class="recipeWrapper">
+      <img src="" alt="nameduplat">
+      <div class="textWrapper">
+
       </div>
+    </div>
+    <div class="btnWrapper">
+      <button>2 Services</button>
+      <button> Ajouter</button>
+    </div>
+
     </nav>
   </body>
 </html>
